minor updates to home page and "on cogSci" post

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
   
   <strong>Hi!</strong>
 
-  <p>I am a first-year graduate student in the <a href="http://cogsci.jhu.edu/">Department of Cognitive Science</a> at Johns Hopkins University. My advisors are <a href="http://mind.cog.jhu.edu/faculty/smolensky/Site/homepage.htm">Paul Smolensky</a> and <a href="http://cogsci.jhu.edu/people/legendre.html">G&eacuteraldine Legendre</a>.</p>
+  <p>I am a first-year graduate student in the <a href="http://cogsci.jhu.edu/">Department of Cognitive Science</a> at Johns Hopkins University. My advisors are <a href="http://cogsci.jhu.edu/people/smolensky.html">Paul Smolensky</a> and <a href="http://cogsci.jhu.edu/people/legendre.html">G&eacuteraldine Legendre</a>.</p>
 
   <p>I finished my undergraduate degree in computer science and linguistics at <a href="http://www.truman.edu">Truman State University</a> in the spring of 2014 and began the PhD program at Hopkins the following fall.</p>
 
